2012-12-13  Byungwoo Lee  <bw80.lee@samsung.com>

        [EFL] Remove redundant pipe write to prevent pipe buffer full.
        https://bugs.webkit.org/show_bug.cgi?id=101135

        Reviewed by Gyuyoung Kim.

        To prevent a source of a deadlock, remove the redundant pipe write
        in wakeUp() function.

        EFL uses ecore_pipe_write() to wake up main run loop, and the function
        uses POSIX pipe write with O_NONBLOCK disabled.
        With O_NONBLOCK disabled, when written data is more than PIPE_BUF,
        pipe write will be blocked until it can be written.

        Currently, every wakeUp() function calls ecore_pipe_write() to invoke
        wakeUpEvent() callback. And this can make pipe buffer full status
        which is the one reason of the lockup problem described in Bug 99494.

        * platform/RunLoop.h:
        (RunLoop):
        * platform/efl/RunLoopEfl.cpp:
        (WebCore::RunLoop::RunLoop):
        (WebCore::RunLoop::wakeUpEvent):
        (WebCore::RunLoop::wakeUp):

2012-12-13  Antti Harju  <antti.harju@ixonos.com>

        [Qt] Fix deleteAllCookies() invalid SQL statement
        https://bugs.webkit.org/show_bug.cgi?id=101580

        Reviewed by Jocelyn Turcotte.

        * platform/network/qt/CookieJarQt.cpp:
        (WebCore::SharedCookieJarQt::deleteAllCookies):

2012-12-13  Ryosuke Niwa  <rniwa@webkit.org>

        Safari spends a lot of time in WebCore::findSimpleWordBoundary while selecting text on large scrabutility.com page
        https://bugs.webkit.org/show_bug.cgi?id=104884

        Reviewed by Hajime Morita.

        We don't need to do anything in AlternativeTextController if selection is already outside of the editable region.

        No new tests are added since this is only a performance improvement, and doesn't change any asymptotic behavior.

        * editing/AlternativeTextController.cpp:
        (WebCore::AlternativeTextController::respondToChangedSelection):

2012-12-12  Jon Lee  <jonlee@apple.com>