@@ -1,3 +1,14 @@
+2012-12-13  Kentaro Hara  <haraken@chromium.org>
+
+        Unreviewed, rolling out r137569.
+        http://trac.webkit.org/changeset/137569
+        https://bugs.webkit.org/show_bug.cgi?id=104876
+
+        A bunch of CSS tests hit ASSERTs
+
+        * css/CSSProperty.h:
+        (WebCore::CSSProperty::CSSProperty):
+
 2012-12-13  Byungwoo Lee  <bw80.lee@samsung.com>
 
         [EFL] Remove redundant pipe write to prevent pipe buffer full.
